# Rust-Distributed-System

./: How L4 and L5 work together.md  L4-rust-distributed-system-patterns.md  L5-Cloud-native-orchestrator-components.md  README.md  level5-service-discovery-types.md  level5types.md
1leader-election-pattern/: leader-election-pattern-types-in-distributed-system.md
1leader-election-pattern/leader_election/: Cargo.toml
Chained-Circuit-Breakers/Chained-Circuit-Breakers/: Cargo.toml
Chained-Circuit-Breakers/Chained-Circuit-Breakers/src/: breaker.rs  main.rs  service_b.rs  service_c.rs
Distributed-Tracing/Distributed-Tracing/: Cargo.toml
L2-coding pattern layer Gangof4 and system pattern 2/: pattern-cheatsheet.md
L2-coding pattern layer Gangof4 and system pattern 2/layer2-coding-pattern-gang/: USE_CASES.md
L2-coding pattern layer Gangof4 and system pattern 2/layer2-system-pattern/: how to crate the project structure.md  layer2-system-patterns.md
L2-coding pattern layer Gangof4 and system pattern 2/layer2-system-pattern/layer2-system-pattern/patterns/api_gateway/: Cargo.toml
L2-coding pattern layer Gangof4 and system pattern 2/layer2-system-pattern/layer2-system-pattern/patterns/api_gateway/src/: lib.rs
L7/: L7-types.md
L7/autoHealingPolicyRewriter/autoHealingPolicyRewriter/: Cargo.toml
L7/autoHealingPolicyRewriter/autoHealingPolicyRewriter/src/: main.rs  policy.rs
L8/: L8.md
L8/autonomous-negotiator-market/autonomous-negotiator-market/: Cargo.toml
L8/autonomous-negotiator-market/autonomous-negotiator-market/src/: main.rs  market.rs
L8/humanInTheLoopOrchestration/human-in-loop-orchestration/: Cargo.toml
L8/humanInTheLoopOrchestration/human-in-loop-orchestration/src/: main.rs  orchestrator.rs
Layer2 Patterns in coding and system/: Layer2-pattern.md  coding-architecture2.md
Layer3-coding-pattern and system pattern/: Layer3-coding-pattern and system pattern.md
Layer3-coding-pattern and system pattern/layer3-codings-patterns/: layer3-coding-patterns-script-setup.sh
Layer3-coding-pattern and system pattern/layer3-system-patterns/: layer3-system-patterns.sh  stand-at-root-run-this.md
Layer3-coding-pattern and system pattern/layer3-system-patterns/l3-system/patterns/api_composition/: Cargo.toml
Layer3-coding-pattern and system pattern/layer3-system-patterns/l3-system/patterns/api_composition/src/: lib.rs
Policy-Gatekeeper/Policy-Gatekeeper/: Cargo.toml
Replication/: replication-types-and-use-cases.md
Replication/replication/: Cargo.toml
Secure-Token-Propagation/Secure-Token-Propagation/: Cargo.toml
Secure-Token-Propagation/Secure-Token-Propagation/src/: auth.rs  client.rs  main.rs  middleware.rs  routes.rs
bulkhead-isolation/: bulkhead-isolation-types.md
bulkhead-isolation/bulkhead_isolation/: Cargo.toml
chaosEngineeringHooks/chaosEngineeringHooks/: Cargo.toml
circuit-breaker/: circuit-breaker-types.md
circuit-breaker/circuit_breaker/: Cargo.toml
consistent-hashing/: consistent-hasing-use-cases.md
consistent-hashing/consistent-hashing/: Cargo.toml  consistent-hashing-types.md
distributed-lock/: distribued-locked-types-use-cases.md
distributed-lock/distributed_lock/: Cargo.toml
event-replay/event-replay/: Cargo.toml
eventual-consistency/: eventual-consistency-types.md
eventual-consistency/eventual_consistency/: Cargo.toml
gossip-protocol/: gossop-protocol-use-cases.md
heartbeat-healthcheck/heartbeat-healthcheck/: Cargo.toml  heartbeat-use-cases.md
heartbeat-healthcheck/heartbeat-healthcheck/src/: heartbeat.rs  main.rs  utils.rs
pubsub/: pubsub-use-cases.md
quorum-majority-voting/: majority-vote-types.md
retry-with-backoff/: retry-backoff-types.md
service-discovery/service-discovery-pattern/: Cargo.toml  how-to-run-this-service-discovery-pattern.md
service-discovery/service-discovery-pattern/src/: lib.rs
service-discovery/service-discovery-pattern/src/service_discovery/: discover.rs  mod.rs
service-discovery/service-discovery-pattern/src/service_registry/: mod.rs  register.rs
service-discovery/service-discovery-pattern/src/shared/: http_utils.rs  mod.rs
sharding-pattern/: sharding-pattern-types-use-cases.md
(+284 files in other folders)
