[package]
name = "secure_token_propagation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "1"
reqwest = { version = "0.11", features = ["json", "stream", "blocking", "rustls-tls"] }
dotenv = "0.15"
tower-http = { version = "0.6", features = ["auth", "trace"] }
chrono = "0.4"  # ✅ Required for expiration time
