[package]
name = "heartbeat-healthcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1", features = ["server"] } 
