[package]
name = "service-discovery-pattern"
version = "0.1.0"
edition = "2021"

# No need to declare [[bin]] if using `bin/*.rs` pattern

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

