[package]
name = "auto_healing_policy_rewriter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
