[package]
name = "autonomous_negotiator_market"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4"] }
