[package]
name    = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower           = "0.4"          #  ← remove `limit` feature (not clone-able)
tower-cookies   = "0.10"
serde_json      = "1"
anyhow          = "1"
